Fix restaurant card img unresponsiveness on mobile phones

--- a/src/style.css
+++ b/src/style.css
@@ -175,6 +175,8 @@ section.first p {
 .third .card-header .embed {
   width: 100%;
   height: 100%;
+  max-width: auto;
+  max-height: 250px;
 }
 
 .third .card-body {
